$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 1.17-2

	* densityplot.oecosimu: merged r1164 (warnings when there was only
	one statistic and hence one lattice panel).

	* nesteddisc: failed if the most species rich sites were tied. Is
	no faster but slaker. Revs 1158, 1159, 1163.

	* permutest.betadisper: print method got ordering of permutation
	p-values wrong in displaying the matrix of pairwise tests. The
	computed values were correct. The formatting for printing contained
	the bug. Reported by Dan O'Shea.

	* screeplot: New argument 'legend' for all methods (except
	'decorana') to draw a legend if the observed and broken stick
	distribution are both plotted. Now also respects 'pch' for the
	broken stick line.

Version 1.17-1 (released February 18, 2010)

	* merged and edited r1133: update FAQ.

	* copied multipart.R & print.multipart.R from the devel branch. 

	* merged r1124: envfit() weights fixed for cca().

	* merged r1123: CCorA() output fixes plus upgrades of
	biplot.CCorA(). 

	* merged r1118, r1119: predict.cca/rda match 'newdata' by dim
	names and gained new choice 'type = "working"'.

	* merged r1120, 1122: simulate.rda/cca gained argument 'rank'. 

	* merged r1102: isompadist() need not require 'vegan'.
	
Version 1.17-0 (released January 11, 2010)

	* Copied from vegan/pkg/vegan version 1.16-34 (rev1087).

	* removed treedist().

	* Documented na.action in cca.object (copied from 1.18-0). 

	* removed MOStest.

	* removed multipart.

	* merged betadisper updates (rev1096 & 1114). 

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-34 (closed January 2, 2010) -- (codename: Lucia)

	* twostagechao: deleted, because question regarding the
	notation in the original article remained unanswered.

	* permat* cleanup: permat.control deleted, not needed any longer
	due to changes in oecosimu, documentation for plot.permat merged
	with permat* help page.
